--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Properties/Resources.resx
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Properties/Resources.resx
@@ -117,9 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="WriteErrorDialogTitle" xml:space="preserve">
-    <value>Target already exists</value>
-  </data>
   <data name="TargetFileHeader" xml:space="preserve">
     <value>Overwrite</value>
   </data>
@@ -199,7 +196,7 @@
     <value>&lt;p&gt;Author: Mercenary/Neurotoxin&lt;br/&gt;Homepage: &lt;a href="http://godspeed.codeplex.com" target="_blank"&gt;http://godspeed.codeplex.com&lt;/a&gt;&lt;/p&gt;
 &lt;p&gt;This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.&lt;/p&gt;
 &lt;p&gt;This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.&lt;/p&gt;
-&lt;p&gt;You should have received a copy of the GNU General Public License along with this program; if not, write to the Free Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.&lt;/p&gt;</value>
+&lt;p&gt;You should have received a copy of the GNU General Public License along with this program; if not, see &lt;a href="http://www.gnu.org/licenses/"&gt;http://www.gnu.org/licenses/&lt;/a&gt;.&lt;/p&gt;</value>
   </data>
   <data name="Close" xml:space="preserve">
     <value>Close</value>
@@ -919,5 +916,8 @@
   </data>
   <data name="TitleTypeSystemFile" xml:space="preserve">
     <value>SYSTEMFILE</value>
+  </data>
+  <data name="SizeInfo" xml:space="preserve">
+    <value>{0:#,0} / {1:#,0} bytes in {2} / {3:file;files}, {4} / {5:dir;dirs}</value>
   </data>
 </root>
