--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Properties/Resources.resx
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Properties/Resources.resx
@@ -920,4 +920,7 @@
   <data name="SizeInfo" xml:space="preserve">
     <value>{0:#,0} / {1:#,0} bytes in {2} / {3:file;files}, {4} / {5:dir;dirs}</value>
   </data>
+  <data name="ReparsePointCannotBeResolved" xml:space="preserve">
+    <value>Reparse point cannot be resolved</value>
+  </data>
 </root>
