--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Properties/Resources.hu-HU.resx
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Properties/Resources.hu-HU.resx
@@ -839,4 +839,10 @@
   <data name="DriveIsNotAccessible" xml:space="preserve">
     <value>A {0} meghajtó nem elérhető.</value>
   </data>
+  <data name="ReparsePointCannotBeResolved" xml:space="preserve">
+    <value>A csatlakozási pontot nem sikerült feloldani.</value>
+  </data>
+  <data name="ReparsePointCannotBeAccessed" xml:space="preserve">
+    <value>A csatlakozási ponthoz nem lehet hozzáférni. Próbáld meg rendszergazdaként indítani a programot, vagy kapcsold ki a Felhasználói fiókok felügyeletét (UAC).</value>
+  </data>
 </root>
