--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Properties/Resources.hu-HU.resx
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Properties/Resources.hu-HU.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="TargetFileHeader" xml:space="preserve">
-    <value>Felülírod ezt:</value>
+    <value>Felülírod ezt</value>
   </data>
   <data name="SourceFileHeader" xml:space="preserve">
-    <value>Ezzel:</value>
+    <value>Ezzel</value>
   </data>
   <data name="Overwrite" xml:space="preserve">
     <value>Felülír</value>
@@ -655,7 +655,7 @@
     <value>A jqe360.com használata a játékok felismeréséhez</value>
   </data>
   <data name="UsePassiveMode" xml:space="preserve">
-    <value>Passzív mód (Figyelem, a XexMenu nem támogatja!)</value>
+    <value>Passzív mód (Figyelem, a XexMenu és a DashLaunch nem támogatja!)</value>
   </data>
   <data name="UseRemoteCopy" xml:space="preserve">
     <value>Távoli Másolás használata NAS és FTP között, ha lehetséges</value>
@@ -844,5 +844,14 @@
   </data>
   <data name="ReparsePointCannotBeAccessed" xml:space="preserve">
     <value>A csatlakozási ponthoz nem lehet hozzáférni. Próbáld meg rendszergazdaként indítani a programot, vagy kapcsold ki a Felhasználói fiókok felügyeletét (UAC).</value>
+  </data>
+  <data name="PassiveModeNotSupported" xml:space="preserve">
+    <value>A {0} nem támogatja a Passzív módot.</value>
+  </data>
+  <data name="CannotCreateFolderWithNoName" xml:space="preserve">
+    <value>Név nélküli mappát nem lehet létrehozni!</value>
+  </data>
+  <data name="CannotCreateFolderWithInvalidCharacters" xml:space="preserve">
+    <value>A mappa neve nem tartalmazhat illegális karaktereket!</value>
   </data>
 </root>
